--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -433,7 +433,7 @@ h2 {
   font-size: clamp(3rem, 8vw, 6rem);
   font-weight: 900;
   letter-spacing: -0.03em;
-  margin-bottom: 24px;
+  /* margin-bottom: 24px; */
   text-transform: uppercase;
   line-height: 0.9;
 }
@@ -850,8 +850,8 @@ h2 {
   opacity: 0;
   pointer-events: none;
   z-index: 98;
-  width: 80px;
-  height: 80px;
+  width: 50px;
+  height: 50px;
 }
 
 .scroll-top.visible {
